--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-the index.html file for uijldert.net hosted on GitHub
+<html>
+  <head>
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+    <title>uijldert.net</title>
+  </head>
+  <body>
+    <p>Under construction ;)</p>
+  </body>
+</html>
